--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -14,19 +14,19 @@ y = 5
 
 [font]
 size = 15.0
-
+#
 [font.bold]
-family = "Iosevka Nerd Font"
+family = "JetBrainsMono Nerd Font"
 style = "Heavy"
 
 [font.bold_italic]
-family = "Iosevka Nerd Font"
+family = "JetBrainsMono Nerd Font"
 style = "Heavy Italic"
 
 [font.italic]
-family = "Iosevka Nerd Font"
+family = "JetBrainsMono Nerd Font"
 style = "Medium Italic"
 
 [font.normal]
-family = "Iosevka Nerd Font"
+family = "JetBrainsMono Nerd Font"
 style = "Medium"
